--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
     width: 100%;
     opacity: 0;
     transition: .3s ease;
-    background-color:hsl(178, 100%, 50%);
+    background-color: rgba(0, 255, 247, 0.5);
     border-radius: 3vw;
 }
 
@@ -68,12 +68,9 @@ body{
 
 
 .nft-image:hover .overlay {
-    opacity: 0.5;
+    opacity: 1
   }
 
-.nft-image:hover .overlay .icon img {
-    opacity: 1;
-}
 
 .sale-details{
     display: flex;
